Add build date (ro.build.date from build.prop) to About screen.
Change-Id: I695e5a8b01616cddf865223d3b037f594da35224

--- a/Settings/res/values/purenexus_strings.xml
+++ b/Settings/res/values/purenexus_strings.xml
@@ -17,4 +17,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Nexus version -->
     <string name="nexus_version">PureNexus version</string>
+    <!-- About screen, build date -->
+    <string name="about_build_date">Build date</string>
 </resources>
