--- a/Settings/res/values/purenexus_strings.xml
+++ b/Settings/res/values/purenexus_strings.xml
@@ -19,4 +19,6 @@
     <string name="nexus_version">PureNexus version</string>
     <!-- About screen, build date -->
     <string name="about_build_date">Build date</string>
+    <!-- About screen, kernel version -->
+    <string name="about_kernel_version">Kernel version</string>
 </resources>
