--- a/Settings/res/values/purenexus_strings.xml
+++ b/Settings/res/values/purenexus_strings.xml
@@ -21,4 +21,11 @@
     <string name="about_build_date">Build date</string>
     <!-- About screen, kernel version -->
     <string name="about_kernel_version">Kernel version</string>
+    <!-- About phone screen,  setting option name-->
+    <string name="about_selinux_status">SELinux status</string>
+    <!-- These statuses are displayed when a device was built with SE Android supoprt.
+    These are displayed by the settings app in the about section. -->
+    <string name="selinux_status_disabled">Disabled</string>
+    <string name="selinux_status_permissive">Permissive</string>
+    <string name="selinux_status_enforcing">Enforcing</string>
 </resources>
